async-coap-uri/proc-macros/tests/ui/assert_rel_ref_literal/unfinished_utf8.stderr
error: unfinished utf8
 --> $DIR/unfinished_utf8.rs:7:29
  |
7 |     assert_rel_ref_literal!("https://www.example.com/a/%F0%90%40");
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
